fixes table vertical-alignment

--- a/css2/style.css
+++ b/css2/style.css
@@ -479,7 +479,6 @@ button:disabled {
 }
 
 .metadata-table th, .metadata-table td {
-  vertical-align: top;
   text-align: left;
   padding: 4px 8px;
 }
@@ -494,7 +493,6 @@ button:disabled {
 
 
 .exif-heading {
-  vertical-align: top;
   text-align: left;
 }
 
@@ -621,6 +619,10 @@ button:disabled {
 }
 .photo-album-countries, .photo-album-count {
   display: inline;
+}
+
+.photo-album-countries {
+  padding-left: 8px;
 }
 
 .photo-album-count {
